view/rt-view.css
.rt-view {
    font: 14px/22px Arial, Helvetica, sans-serif;
    word-break: break-word;
    word-wrap: break-word;
    z-index: 501;
    width: 100%;
    min-height: 100%;
    background-color: #f2f2f2;
}
.rt-view .rt-body {
    text-align: left;
    padding-top: 44px;
}
.rt-view .rt-head {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 501;
    height: 44px;
    line-height: 44px;
    font-size: 18px;
    background-color: #fff;
    color: #333;
    -webkit-user-select: none;
            user-select: none;
    -webkit-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);
}

.rt-view .rt-actions .c-icon {
    cursor: pointer;
    font-size: 21px;
}

.rt-view .rt-head .rt-back {
    width: 50px;
    height: 44px;
    float: left;
    padding-left: 2px;
    text-align: center;
}
.rt-view .rt-head .rt-center {
    position: absolute;
    left: 90px;
    right: 90px;
    top: 0;
    bottom: 0;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    text-align: center;
}
.rt-view .rt-head .rt-title {
    vertical-align: middle;
}
.rt-view .rt-head .rt-subtitle {
    font-size: 14px;
    margin-left: 5px;
    vertical-align: middle;
}
.rt-view .rt-head .rt-actions {
    min-width: 44px;
    height: 44px;
    float: right;
    text-align: center;
    font-size: 16px;
}

.rt-view .rt-actions > * {
    margin-right: 15px;
    margin-left: 0;
}
.rt-view .rt-actions * {
    vertical-align: middle;
}

.rt-view .rt-loading {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 161px;
    height: 49px;
    line-height: 49px;
    border-radius: 1px;
    overflow: hidden;
    padding: 0;
    margin: -24px auto auto -80px;
    color: #fff;
}
.rt-view .rt-loading span {
    display: inline-block;
    color: #6b6b6b;
    font-size: 18px;
    vertical-align: middle;
}
.rt-view .rt-loading .rt-loading-logo {
    background: url(//m.baidu.com/se/static/img/iphone/tab_loading__bg_logo.png) no-repeat;
    background-size: 147px 48px;
    height: 48px;
    width: 147px;
}
.rt-view .rt-loading .rt-loading-bar {
    display: inline-block;
    position: absolute;
    height: 60px;
    width: 12px;
    top: 0;
    left: 0;
    background-color: rgba(255, 255, 255, .5);
    -webkit-transform: skew(20deg);
            transform: skew(20deg);
    -webkit-animation: 1s rt-lodingframes infinite;
            animation: 1s rt-loadingframes infinite;
}
@keyframes rt-loadingframes {
    0% {
        left: 0;
    }
    100% {
        left: 150px;
    }
}
@-webkit-keyframes rt-loadingframes {
    0% {
        left: 0;
    }
    100% {
        left: 150px;
    }
}

